lanecwe-Prod/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>NS_Data_Migration_Match__c</fullName>
        <description>temp for migration data analysis</description>
        <formula>/*  External ID match */
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
External_ID__c = NS_External_ID__c, &quot;Match&quot;, 
&quot;Not a Match&quot;
)
)
*/
/*  Signature Date */
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
NS_Contract_Doc_Status__c = &quot;Active&quot;, &quot;Active&quot;,
IF(
ISBLANK(NS_Contract_Doc_Status__c), &quot;Blank&quot;,
IF(
NS_Contract_Doc_Status__c = TEXT(File_Store_Contract_Status__c), &quot;Match&quot;,
&quot;Not a Match&quot;
)
)
)
)
*/
/*  Not Active Contracts CEA Date Check*/
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
NS_Contract_Doc_Status__c = &quot;Active&quot;, &quot;Active&quot;,
IF(
ISBLANK(NS_Contract_Doc_Status__c), &quot;Blank&quot;,
IF(
Contract_End_Anniversary_Date_2__c = NS_CEA_Date__c , &quot;Match&quot;,
&quot;Not a Match&quot;
)
)
)
)
*/
/* Purge Date Check*/
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
NS_Contract_Doc_Status__c = &quot;Active&quot;, &quot;Active&quot;,
IF(
ISBLANK(NS_Contract_Doc_Status__c), &quot;Blank&quot;,
IF(
 SC_Contract_Purge_Date_Seven_years__c =  NS_Purge_Date__c , &quot;Match&quot;,
&quot;Not a Match&quot;
)
)
)
)
*/
/*  Signature Date Check*/
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
NS_Contract_Doc_Status__c = &quot;Active&quot;, &quot;Active&quot;,
IF(
ISBLANK(NS_Contract_Doc_Status__c), &quot;Blank&quot;,
IF(
CustomerSignature__c = NS_Signature_Date__c, &quot;Match&quot;,
&quot;Not a Match&quot;
)
)
)
)
*/
/* Contract Type Check*/
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
NS_Contract_Doc_Status__c = &quot;Active&quot;, &quot;Active&quot;,
IF(
ISBLANK(NS_Contract_Doc_Status__c), &quot;Blank&quot;,
IF(
 TEXT(ContractType__c) =  NS_Contract_Type__c , &quot;Match&quot;,
&quot;Not a Match&quot;
)
)
)
)
*/
/* TCV Check*/
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
ISBLANK(NS_Agreement_Volume__c), &quot;Blank&quot;,
IF(
 NS_Agreement_Vol_Period__c = &quot;Monthly&quot; &amp;&amp; (NS_Agreement_Volume__c = Total_MRR__c), &quot;MRR Match&quot;,
IF(
 (NS_Agreement_Vol_Period__c = &quot;Annually&quot; || NS_Agreement_Vol_Period__c = &quot;Term of Contract&quot;) &amp;&amp;  (Total_Contract_Value__c  =  NS_Agreement_Volume__c) , &quot;TCV Match&quot;,
IF(
 NS_Agreement_Vol_Period__c = &quot;Quarterly&quot; &amp;&amp;  (Total_Contract_Value__c  = (4* NS_Agreement_Volume__c)) , &quot;Quarterly TCV Match&quot;,
&quot;Not a Match&quot;
)
)
)
)
)
*/
/*Initial Term Check*/
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
ISBLANK(NS_Initial_Term__c ), &quot;Blank&quot;,
IF(
SC_Initial_Contract_Term_in_months__c =   NS_Initial_Term__c , &quot;Match&quot;,
&quot;Not a Match&quot;
)
)
)
*/
/*Signature Date Check*/
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
ISBLANK( NS_Signature_Date__c ), &quot;Blank&quot;,
IF(
 CustomerSignature__c = NS_Signature_Date__c , &quot;Match&quot;,
&quot;Not a Match&quot;
)
)
)
*/
/*IF Active Auto-Renew Check */
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
NS_Contract_Doc_Status__c &lt;&gt; &quot;Active&quot;, &quot;Not Active&quot;,
IF(
  SC_Auto_Renewal__c =  NS_Auto_Renew__c, &quot;Match&quot;,
&quot;Not a Match&quot;
)
)
)
*/
/*IF Active Auto-Renew Interval Check */
/*
IF(
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
IF(
NS_Contract_Doc_Status__c &lt;&gt; &quot;Active&quot;, &quot;Not Active&quot;,
IF(
  SC_Auto_renewal_Interval_in_months__c =   NS_Auto_Renew_Interval__c , &quot;Match&quot;,
&quot;Not a Match&quot;
)
)
)
*/
/* TCV Check */

IF( 
ISBLANK(NS_Agreement_Volume__c) &amp;&amp; ISBLANK( NS_GM_IM_TCV__c ), &quot;No TCV Value&quot;,
IF(
ROUND(Total_Contract_Value__c, 2) = ROUND(NS_Calculated_TCV_value__c, 2), &quot;Match&quot;, &quot;No Match&quot;
)
)</formula>
        <label>NS Data Migration Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_External_ID__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_GM_IM_TCV__c</fullName>
        <description>from the GM/IM TCV fields</description>
        <label>NS GM/IM TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NS_Historical_Data_Key_Fields__c</fullName>
        <description>Displays Auto-Renew, Auto-renew Interval, End/Anniversary Date , Service Commencement Date , Sign Date , Document Purge Date (7 years) , Agreement Vol., Agreement Vol. Period (Meta Data) , Initial Term , File Store Contract Status , Document Type</description>
        <inlineHelpText>Shows values for: Auto-Renew, Auto-renew Interval, End/Anniversary Date , Service Commencement Date , Sign Date , Document Purge Date (7 years) , Agreement Vol., Agreement Vol. Period (Meta Data) , Initial Term , File Store Contract Status , Document Type</inlineHelpText>
        <label>NS Historical Data - Key Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NS_Initial_Term__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS Initial Term</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NS_Possibly_Complex_NS_Data_Mig_Issue__c</fullName>
        <description>Shows the reason as input from DT&apos;s analysis</description>
        <label>NS Possibly Complex Data Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Product_Type__c</fullName>
        <label>NS Product Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Purge_Date_Match_to_NS__c</fullName>
        <formula>IF( 
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
/*IF( 
NS_Contract_Doc_Status__c &lt;&gt; &quot;Active&quot;, &quot;Not Active&quot;, */
IF( 
ISBLANK(NS_Purge_Date__c ), &quot;No value for Purge Date in NS&quot;, 
IF( 
SC_Contract_Purge_Date_Seven_years__c = NS_Purge_Date__c , &quot;Match&quot;, 
&quot;Not a Match&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS_Purge Date Match to NS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Purge_Date__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS Purge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NS_SC_Date_Match_to_NS__c</fullName>
        <formula>IF( 
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
/*IF( 
NS_Contract_Doc_Status__c &lt;&gt; &quot;Active&quot;, &quot;Not Active&quot;, */
IF( 
ISBLANK(NS_SC_Date__c), &quot;No value for SC Date in NS&quot;, 
IF( 
Service_Commencement_Date__c = NS_SC_Date__c, &quot;Match&quot;, 
&quot;Not a Match&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS_SC Date Match to NS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_SC_Date__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS SC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NS_Sign_Date_Match_to_NS__c</fullName>
        <formula>IF( 
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
/*IF( 
NS_Contract_Doc_Status__c &lt;&gt; &quot;Active&quot;, &quot;Not Active&quot;, */
IF( 
ISBLANK(NS_Signature_Date__c), &quot;No value for Sign Date in NS&quot;, 
IF( 
CustomerSignature__c = NS_Signature_Date__c, &quot;Match&quot;, 
&quot;Not a Match&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS_Sign Date Match to NS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Signature_Date__c</fullName>
        <description>temp for migration data analysis</description>
        <label>NS Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NS_Sub_Lic_Type__c</fullName>
        <description>used to audit unclassified package names and to confirm derived products were accurate.</description>
        <label>NS Subscription License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_TCV_Step__c</fullName>
        <formula>IF(
 ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;,
IF(
NS_GM_IM_TCV__c &gt; 0, &quot;GM-IM TCV Value&quot;,
IF(
NS_Agreement_Vol_Period__c = &quot;Annually&quot;, &quot;Annually&quot;, 
IF(
 NS_Agreement_Vol_Period__c = &quot;Monthly&quot;, &quot;Monthly&quot;, 
IF(
 NS_Agreement_Vol_Period__c = &quot;Quarterly&quot;, &quot;Quarterly&quot;,
IF(
 NS_Agreement_Vol_Period__c = &quot;Semi-annually&quot;, &quot;Semi-annually&quot;,
IF(
 NS_Agreement_Vol_Period__c = &quot;Term of Contract&quot;, &quot;Term of Contract&quot; ,
IF(
 NS_Agreement_Vol_Period__c = &quot;One-Time&quot;, &quot;One-Time&quot; , &quot;Error in Formula&quot;
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS TCV Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS__c</fullName>
        <formula>IF( 
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
/*IF( 
NS_Contract_Doc_Status__c &lt;&gt; &quot;Active&quot;, &quot;Not Active&quot;, */
IF( 
ISBLANK(NS_Initial_Term__c), &quot;No value for Initial Term in NS&quot;, 
IF( 
SC_Initial_Contract_Term_in_months__c = NS_Initial_Term__c , &quot;Match&quot;, 
&quot;Not a Match&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS_Initial Term Match to NS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Show_Fees_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Show Fees Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Exceptions__c</fullName>
        <label>X_LFR_Non-Standard Exceptions</label>
        <picklist>
            <picklistValues>
                <fullName>Non Standard - Pricing/Commercials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard - Legal Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard - Commercials &amp; Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard - Product not Supported by Contract Gen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Std_Terms_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Std T&amp;C&apos;s and 3rd Party Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Omniture_Campaign_Code__c</fullName>
        <formula>IF(
!ISBLANK(Opportunity.Omniture_Campaign_Code__c), Opportunity.Omniture_Campaign_Code__c, &quot;None&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Omniture Campaign Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Name_for_Merge__c</fullName>
        <formula>Opportunity.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Name for Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_SFDC_Acct_ID__c</fullName>
        <formula>Opportunity.Account.SFDC_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp SFDC Acct ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Opportunity Type from the related Opportunity</inlineHelpText>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallApprovalStatus__c</fullName>
        <label>Overall Approval Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>TEXT(Opportunity.Owner_Copy__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGI_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>X_LFR_Parent Contract Name</label>
        <referenceTo>PGI_Contract__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentDeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentQuoteName__c</fullName>
        <label>ParentDealName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentQuote__c</fullName>
        <label>X_LFR_Not_In_UseParentDeal</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Contract_Number__c</fullName>
        <label>Parent Contract Number#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Lengthened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Terms Lengthened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Provisioning__c</fullName>
        <inlineHelpText>The phone number that will be provisioned in Tesla.</inlineHelpText>
        <label>Phone (Provisioning)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>X_LFR_Primary Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotional_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotional Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotional_Trial_Offer_Period__c</fullName>
        <label>Promotional Trial Offer Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provisioning_Details_same_as_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WF Rule references this to update Ship to Fields</description>
        <inlineHelpText>Check this and then save the record if you want to copy over the Company Name (Legal), Company Address, Phone and Fax to the Provisioning fields.</inlineHelpText>
        <label>Same as Contract Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q_C_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q/C Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quorum_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quorum Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteBillingAddress__c</fullName>
        <formula>if(LEN(BillingStreet)&gt;0, BillingStreet&amp; &quot; &quot; , &quot;&quot; )  &amp;
if(LEN(BillingCity)&gt;0, BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(BillingState)&gt;0, BillingState&amp; &quot; -&quot; , &quot;&quot; )&amp;
if(LEN(BillingPostalCode)&gt;0, BillingPostalCode&amp; &quot; ,&quot; , &quot;&quot;) &amp;
If(LEN( BillingCountry) &gt;0, BillingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteBillingAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Currency__c</fullName>
        <formula>TEXT(Opportunity.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q/C Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration_Date__c</fullName>
        <formula>CreatedDate +30</formula>
        <label>Q/C Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Owner__c</fullName>
        <formula>Opportunity.Owner_Copy__r.FirstName  &amp; &apos; &apos; &amp;  Opportunity.Owner_Copy__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q/C Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>X_LFR_Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer/Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer – Rate Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_required_by__c</fullName>
        <description>Date quote requested by customer</description>
        <label>Q/C required by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_isOppOwner__c</fullName>
        <description>field used exclusively for reporting.  this will show records where the user of the report is the opportunity owner of the Q/C&apos;s related opportunity record.</description>
        <formula>$User.Id =  Opportunity.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isOppOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>PGI Operating Region</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>X_LFR_Rejected Reason</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Company_Rev_Last_Month__c</fullName>
        <formula>Company__r.Last_Month_of_Revenue_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Company Rev Last Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TBD</description>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Alert_Ready_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Auto_renewal_Interval_in_months__c</fullName>
        <label>Auto-renewal Interval (in months)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Commit_End_if_diff_from_Contract_End__c</fullName>
        <label>Commit End-if diff from Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SC_Contract_Purge_Date_Seven_years__c</fullName>
        <label>Contract Purge Date (Seven years)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SC_Contract_Volume_c__c</fullName>
        <inlineHelpText>Agreement Volume in NS</inlineHelpText>
        <label>Contract Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SC_Contractual_Credit_Rebate_Bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>X_Contractual Credit, Rebate, Bonus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_File_Store_Ready_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>File Store Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Initial_Contract_Term_in_months__c</fullName>
        <label>Initial Contract Term (in months)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Min_Commit_Shortfall_Non_std_lang__c</fullName>
        <defaultValue>false</defaultValue>
        <label>X_Min Commit Shortfall (Non-std lang)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Minimum_Commitment_Term__c</fullName>
        <label>X_Minimum Commitment Term</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SC_Non_Std_Payment_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Std Payment Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Notes_Associated_with_Termination__c</fullName>
        <label>X_Notes Associated with Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SC_Prompt_Pay_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>X_Prompt Pay Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_SLAs_with_Financial_Penalties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>X_SLAs with Financial Penalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SC_Turn_Off_This_Contract_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turn Off This Contract Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Volume_Discounts_Tiered_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>X_Volume Discounts (Tiered Pricing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC18ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q/C 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Contract_Name__c</fullName>
        <formula>MID(Name, 10, 180)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Ops Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Id__c</fullName>
        <defaultValue>$User.Terr__c</defaultValue>
        <label>Rep Territory Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_As_Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same As Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scott_Tapp_Report_already__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scott Tapp Report already</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceCommencementDate__c</fullName>
        <label>X_LFR_Service Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Commencement_Date__c</fullName>
        <formula>IF(
!ISBLANK(Actual_Service_Commencement_Date__c), Actual_Service_Commencement_Date__c,
IF(
! ISBLANK(Desired_Service_Commencement_Date__c) &amp;&amp;  ! ISBLANK(CustomerSignature__c) &amp;&amp; 
(Desired_Service_Commencement_Date__c &gt; CustomerSignature__c)
,  Desired_Service_Commencement_Date__c,
IF(
! ISBLANK(Desired_Service_Commencement_Date__c) &amp;&amp;  ! ISBLANK(CustomerSignature__c) &amp;&amp; 
(CustomerSignature__c &gt; Desired_Service_Commencement_Date__c)
,  CustomerSignature__c,
IF(
! ISBLANK(Desired_Service_Commencement_Date__c), Desired_Service_Commencement_Date__c, CustomerSignature__c
))))</formula>
        <label>Service Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signature_Date_Match_to_NS__c</fullName>
        <formula>IF( 
ISBLANK(External_ID__c), &quot;Not Migrated Data&quot;, 
/*IF( 
NS_Contract_Doc_Status__c = &quot;Active&quot;, &quot;Active&quot;, */
IF( 
ISBLANK(NS_Contract_Doc_Status__c), &quot;No value for Status in NS&quot;, 
IF( 
NS_Contract_Doc_Status__c = TEXT(File_Store_Contract_Status__c), &quot;Match&quot;, 
&quot;Not a Match&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NS_Contract Status Match to NS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_1_Email__c</fullName>
        <description>$User.Email</description>
        <formula>Opportunity.Owner_Copy__r.Docusign_email_group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Your contract is sent to this email address for signing.  You can search for this in Outlook to determine what people receive the request for signing of your contract at Pgi</inlineHelpText>
        <label>Internal Signing Email alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_1_First_Name__c</fullName>
        <description>$User.FirstName</description>
        <formula>&quot;Any&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Owner&apos;s First Name</inlineHelpText>
        <label>Signer 1 First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_1_Last_Name__c</fullName>
        <description>$User.LastName</description>
        <formula>&quot;Signer&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Owner&apos;s Last Name</inlineHelpText>
        <label>Signer 1 Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_2_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_2_First_Name__c</fullName>
        <formula>Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signer 2 First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_2_Last_Name__c</fullName>
        <formula>Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signer 2 Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who will be receiving the Contract to Sign.</inlineHelpText>
        <label>Signer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Contact for Signature)</relationshipLabel>
        <relationshipName>Deals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>X_LFR_Peter_Subtotal</label>
        <summarizedField>QuoteLineItem.TotalPrice__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TCV_Delta__c</fullName>
        <label>TCV Delta</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TESLA_CompanyID__c</fullName>
        <formula>IF(
! ISBLANK(Tesla_Company_ID__c), Tesla_Company_ID__c, 
Company__r.TESLA_IntlCompanyID__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TESLA-Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telco_Surcharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telco Surcharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Terns of the quote</description>
        <label>Term</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>